# quiver-feature

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  build.sh  mbw_c2c.cpp  preprocess_paper100M.py  setup.py  start_1x3.sh  start_2x2.sh  start_3x2.sh  start_worker.py  test.py  test_on_fake_data.py  test_on_real_graph.py
csrc/include/infinity/core/: Configuration.h  Context.cpp  Context.h
csrc/include/infinity/memory/: Buffer.cpp  Buffer.h
csrc/include/infinity/queues/: QueuePair.cpp  QueuePair.h  QueuePairFactory.cpp
csrc/include/miniz/: miniz.h
csrc/include/qvf/: com_endpoint.h  common.h  dist_tensor.h  dist_tensor_client.h  dist_tensor_server.h  pipe.h  qvf.h  range.h  resgistered_memory_buffer.h  shared_loader.h  tensor_endpoint.h
csrc/src/: dist_tensor.cpp  dist_tensor_client.cpp  dist_tensor_server.cpp  module.cpp  pipe.cpp  register.cpp  shared_loader.cpp
docs/: memory.md  partition_methods.md  rdma_details.md
examples/mag240M/: README.md  config.py  gnn.py  root.py
examples/mag240M/logs/graphsage/lightning_logs/version_0/: events.out.tfevents.1652503716.komodo01.253011.0  hparams.yaml
examples/mag240m/: README.md  config.py  distribute_training.py  preprocess.py  preprocess_quiver.py
examples/ogb-products/: config.py  distribute_training.py
examples/reddit/: config.py  distribute_training.py
feature/: __init__.py  dist_feature.py  feature_server.py
infinity_release/include/infinity/core/: Context.h
infinity_release/include/infinity/queues/: QueuePair.h
infinity_release/infinity/: read-write-send  send-performance  test_multiread  test_multiread_multiqp  test_read
quiver_feature/: __init__.py  common.py  dist_helper.py  dist_tensor_pgas.py  dist_tensor_rpc.py  local_tensor_pgas.py  tensor_loader.py  utils.py
quiver_feature/multiprocessing/: __init__.py  reductions.py
tests/cpp/: test_DistTensorClient.cpp  test_DistTensorServer.cpp  test_Pipe.cpp  test_main.cpp  test_pipe.cpp
tests/infinity/: feature_server.cpp  read-write-send.cpp  test_multiread.cpp  test_multiread_multiqp.cpp  test_read.cpp
tests/python/: config.py  preprocess_Dataset.py  test_DGLUnifiedTensor.py  test_DistHelper.py  test_DistTensorClient.py  test_DistTensorPGAS.py  test_DistTensorRPC.py  test_DistTensorServer.py  test_LocalTensorPGAS.py  test_MultiMachineDistTensorClientServer.py  test_MultiMachineDistTensorPGAS.py  test_MultiMachineDistTensorRPC.py  test_PipeParam.py  test_RealDataset.py  test_RegisteredTensorTransfer.py  test_SharedLoader.py  test_TensorEndPoint.py  tmp.py
tmp_files/: local_collect_test.py  preprocess_paper100M.py  setup.py  start_2x1.sh  start_2x2.sh  test_pure_cpu_transfer.py
